--- a/docker-compose-wordpress.yml
+++ b/docker-compose-wordpress.yml
@@ -1,27 +1,15 @@
 version: '3.3'
 
 services:
-   db:
-     image: mysql:5.7
-     volumes:
-       - db_data:/var/lib/mysql
-     restart: always
-     environment:
-       MYSQL_ROOT_PASSWORD: somewordpress
-       MYSQL_DATABASE: wordpress
-       MYSQL_USER: wordpress
-       MYSQL_PASSWORD: wordpress
-
    wordpress:
-     depends_on:
-       - db
-     image: wordpress:latest
+     image: mcr.microsoft.com/azuredocs/multicontainerwordpress
+     volumes:
+      - ${WEBAPP_STORAGE_HOME}/site/wwwroot:/var/www/html
      ports:
        - "8000:80"
      restart: always
-     environment:
-       WORDPRESS_DB_HOST: db:3306
-       WORDPRESS_DB_USER: wordpress
-       WORDPRESS_DB_PASSWORD: wordpress
-volumes:
-    db_data:
+   redis:
+     image: mcr.microsoft.com/oss/bitnami/redis:6.0.8
+     environment: 
+      - ALLOW_EMPTY_PASSWORD=yes
+     restart: always 
